# SDV-Dashboard

./: README.md
Qt/: CMakeLists.txt  gauge.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
raspberrypi/: .gitignore  CMakeLists.txt  a.out  motor_rx.cpp  motor_tx.cpp  rx  tx  video_test.cpp
raspberrypi/include/: motor_rx.hpp  motor_tx.hpp  video_streamer.hpp
raspberrypi/src/: main.cpp  motor_rx.cpp  motor_tx.cpp  video_streamer.cpp
stm32/: .cproject  .gitignore  .project  SDV_PID_Control.ioc
stm32/Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
stm32/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
